# curlnoise_simd

./: CMakeLists.txt  curlnoise.h  example_2dwake.cpp  example_2dwake.h  main.cpp  main2.cpp  noise.cpp  noise.h  util.h
experiments/: CMakeLists.txt  gather.cpp  iaca_test.cpp  poly.cpp  poly_array.cpp  poly_intrinsic.cpp  poly_two_loops.cpp  smooth.cpp  smooth_bf.cpp
original/: bluenoise.h  curlnoise.h  example_2dwake.cpp  example_2dwake.h  interp.h  main.cpp  noise.cpp  noise.h  rigidshape2.h  util.h  vec.h
simd/: float8.hpp
