

include_directories(..)
add_executable(poly poly.cpp)
add_executable(poly_array poly_array.cpp)
add_executable(poly_two_loops poly_two_loops.cpp)
add_executable(poly_intrinsic poly_intrinsic.cpp)
add_executable(iaca_test iaca_test.cpp)


add_executable(smooth smooth.cpp)
add_executable(smooth_bf smooth_bf.cpp)

add_executable(gather gather.cpp)